tests/paczka1/fuzzy1/82591693.err
Error in line 1: 0GvKL A310 2,4
Error in line 5: mVWx2dv A310 51,5
Error in line 2: A101 A101 10,4
Error in line 10: 0GvKL A101 81,3
Error in line 8: TZUufG A310 220,7
Error in line 13: A101 A310 7,4
Error in line 28: mVWx2dv A310 82,2
Error in line 33: TZUufG A310 256,3
